@@ -68,7 +68,7 @@ ppl_interface_generator_prolog_generated_test_pl.m4 \
 ppl_interface_generator_prolog_generated_test_pl_code.m4
 
 ppl_prolog_generated_test.stamp: $(interface_generator_dependencies)
-	m4 --prefix-builtin -I../.. \
+	$(M4) --prefix-builtin -I../.. \
 		-I$(srcdir) -I$(srcdir)/.. -I$(srcdir)/../.. \
 		$(srcdir)/ppl_interface_generator_prolog_generated_test_pl.m4 \
 			> ppl_prolog_generated_test_blob
