@@ -23,6 +23,10 @@ o  The OCaml interface can now be compiled to native code using ocamlopt.
 o  New configuration option `--with-mlgmp=DIR' allows to specify the
    installation directory of the ML GMP package.
 
+o  The configuration script now explicitly checks that a recent enough
+   version of GNU M4 is available (in previous versions this check was
+   not performed and building the library could fail in a mysterious way).
+
 
 Bugfixes
 ========
